<resources>
    <string name="app_name">ILLIDAN</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="Register">Registrarse</string>
    <string name="inv_categoria">CATEGORIA</string>
    <string name="inv_producto">REGISTRO DE PRODUCTO</string>
    <string name="inv_lista">LISTA DE PRODUCTOS</string>
    <string name="reg_categoria">REGISTRO DE CATEGORIA INVENTARIO</string>
    <string name="text_nombre">NOMBRE</string>
    <string name="text_apellido">APELLIDO</string>
    <string name="text_descripcion">DESCRIPCIÓN</string>
    <string name="btn_guardar">GUARDAR</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="titulo_reg_prod">REGISTRO DE PRODUSCTOS</string>
    <string name="fecha_pro">FECHA</string>
    <string name="codigo_pro">CÓDIGO</string>
    <string name="marca">MARCA</string>
    <string name="tipo">TIPO</string>
    <string name="precio">PRECIO</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="tituloListaProd">LISTA DE INVENTARIO</string>
    <string name="tituloDetalleProduct">DETALLE DE PRODUCTO SELECCIONADO</string>
    <string name="consultaProducto">CONSULTAR PRODUCTO</string>
    <string name="tituloConsulta">CONSULTA DE PRODUCTO DEL INVENTARIO</string>
    <string name="btnEliminar">ELIMINAR</string>

    <!--PARA NOMBRE DEL PROYECTO-->
    <string name="menu_title">CnelEp</string>
    <string name="menu_name_app">Illidan</string>

    <!--PARA EL MENU -->
    <string name="menu_home">Home</string>
    <string name="menu_activity">Actividad</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_add_usuarios">Registrar Usuario</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_comunication">Comunicate</string>


    <!--PARA EL MENU ITEM -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_configuration">Configuración</string>
    <string name="contrato_ordenes">Generar Ordenes</string>
    <string name="contrato_bienes">Asignar Bienes</string>
    <string name="contrato_responsable">Asignar Responsables</string>
    <string name="menu_about_us">Quiénes Somos</string>

    <!-- DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--CREDENTIALS-->
    <string name="credentials">user_value</string>

    <!--DATA USER-->
    <string name="title_profile">Datos de Usuario 😄</string>
    <string name="title_about_us">Quiénes Somos 😎</string>

    <!--REGISTER USER-->
    <string name="title_register_user">Registro de Usuario 😄</string>
    <string name="label_name_user">Usuario</string>
    <string name="label_lastname_user">Apellido</string>
    <string name="label_name">Nombre</string>
    <string name="label_identification">Identificación</string>
    <string name="label_rol">Rol</string>

</resources>