<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/layout_home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/menu_contratos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/item_orden"
                        android:icon="@drawable/icon_file"
                        android:title="@string/contrato_ordenes" />
                <item
                        android:id="@+id/item_bienes"
                        android:icon="@drawable/icon_check"
                        android:title="@string/contrato_bienes" />
                <item
                        android:id="@+id/item_responsable"
                        android:icon="@drawable/icon_responsable"
                        android:title="@string/contrato_responsable" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_perfil"
                    android:icon="@drawable/layout_user_circle"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_configuration"
                    android:icon="@drawable/layout_build"
                    android:title="@string/menu_configuration" />
            </group>
        </menu>
    </item>


    <item android:title="@string/menu_comunication">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/layout_about_us"
                android:title="@string/menu_about_us" />
        </menu>
    </item>
</menu>