<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.contrato.Contratos">

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:fontFamily="@font/evelyn"
        android:gravity="center"
        android:text="@string/titulo_reg_prod"
        android:textColorLink="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/marca"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/fecha_pro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/tipo"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/marcaProducto"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/fechaRegPro"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/listaTipoInve"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cantidad"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/precio"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNumberCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="1234567890"
            android:ems="9"
            android:inputType="number"
            android:maxLength="19"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editTextNumberPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_nombre"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombre_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_descripcion"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/descripcion_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/codigo_pro"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/codigo_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guardad_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_guardar" />

        <Button
            android:id="@+id/btn_cancelar_reg_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancelar" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarGuardar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/idPorcentaje"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:visibility="invisible" />
</LinearLayout>