<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventario.ConsultaProducto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="158dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="124dp"
            android:layout_height="117dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:src="@drawable/hallazgo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="172dp"
            android:layout_height="94dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/evelyn"
            android:text="@string/tituloConsulta"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

    </LinearLayout>


    <EditText
        android:id="@+id/text_consulta_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="176dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_consulta_nombre"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_consulta_descrip"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_consulta_precio"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_consulta_cantidad"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="404dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_consulta_marca"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="460dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/marca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="504dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_editar_guardar_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_guardar" />

        <Button
            android:id="@+id/btn_eliminar_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEliminar" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_busqueda_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>